# QSemVer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: SemVer.h
src/: SemVer.cpp
tst/: SemVerUnitTest.cpp  SemVerUnitTest.h  TestMain.cpp
